fixed background on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,12 @@ body {
     background-size: cover;
     background-attachment: fixed;
   }
+
+  @media only screen and (max-width: 768px) {
+    body {
+      background-image: url("assets/images/backgroundsml.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+    }
+}
